@@ -201,6 +201,7 @@ AC_ARG_ENABLE([msbc],
 	[AS_HELP_STRING([--enable-msbc], [enable mSBC support])])
 AM_CONDITIONAL([ENABLE_MSBC], [test "x$enable_msbc" = "xyes"])
 AM_COND_IF([ENABLE_MSBC], [
+	PKG_CHECK_MODULES([SPANDSP], [spandsp >= 0.0.6])
 	AC_DEFINE([ENABLE_MSBC], [1], [Define to 1 if mSBC is enabled.])
 ])
 
