@@ -107,7 +107,8 @@ AM_CFLAGS = \
 	@LIBBSD_CFLAGS@ \
 	@LIBUNWIND_CFLAGS@ \
 	@MPG123_CFLAGS@ \
-	@SBC_CFLAGS@
+	@SBC_CFLAGS@ \
+	@SPANDSP_CFLAGS@
 
 LDADD = \
 	@AAC_LIBS@ \
@@ -123,4 +124,5 @@ LDADD = \
 	@LIBUNWIND_LIBS@ \
 	@MP3LAME_LIBS@ \
 	@MPG123_LIBS@ \
-	@SBC_LIBS@
+	@SBC_LIBS@ \
+	@SPANDSP_LIBS@
